Atualiza projeto local no repositório remoto