@@ -1,24 +1,8 @@
-/*
- * Decompiled with CFR 0.152.
- * 
- * Could not load the following classes:
- *  jakarta.validation.constraints.NotBlank
- *  org.springframework.http.HttpStatus
- *  org.springframework.http.HttpStatusCode
- *  org.springframework.http.ResponseEntity
- *  org.springframework.web.bind.annotation.GetMapping
- *  org.springframework.web.bind.annotation.PostMapping
- *  org.springframework.web.bind.annotation.RequestBody
- *  org.springframework.web.bind.annotation.RequestMapping
- *  org.springframework.web.bind.annotation.RequestParam
- *  org.springframework.web.bind.annotation.RestController
- */
 package br.com.redemaisfarma.adapters.inbound.web.controller;
 
 import br.com.redemaisfarma.application.service.PasswordResetService;
 import jakarta.validation.constraints.NotBlank;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -28,95 +12,76 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping(value={"/api/auth"})
+@RequestMapping("/api/auth")
 public class PasswordResetApiController {
+
     private final PasswordResetService resetService;
 
     public PasswordResetApiController(PasswordResetService resetService) {
         this.resetService = resetService;
     }
 
-    @PostMapping(value={"/esqueci-senha"})
+    @PostMapping("/esqueci-senha")
     public ResponseEntity<ApiStatus> esqueciSenha(@RequestBody EsqueciSenhaRequest body) {
-        String id;
-        String string = id = body == null || body.emailOuCpf == null ? "" : body.emailOuCpf.trim();
+        String id = (body == null || body.emailOuCpf == null) ? "" : body.emailOuCpf.trim();
         if (!id.isEmpty()) {
-            this.resetService.solicitarResetPorEmailOuCpf(id);
+            resetService.solicitarResetPorEmailOuCpf(id);
         }
-        return ResponseEntity.ok((Object)new ApiStatus("ok"));
+        return ResponseEntity.ok(new ApiStatus("ok"));
     }
 
-    @GetMapping(value={"/validar-token"})
-    public ResponseEntity<ValidarTokenResponse> validarToken(@RequestParam String token) {
-        boolean valido = this.resetService.validarToken(token).isPresent();
-        return ResponseEntity.ok((Object)new ValidarTokenResponse(valido));
+    @GetMapping("/validar-token")
+    public ResponseEntity<ValidarTokenResponse> validarToken(@RequestParam("token") String token) {
+        boolean valido = resetService.validarToken(token).isPresent();
+        return ResponseEntity.ok(new ValidarTokenResponse(valido));
     }
 
-    @PostMapping(value={"/resetar-senha"})
+    @PostMapping("/resetar-senha")
     public ResponseEntity<ApiStatus> resetarSenha(@RequestBody ResetarSenhaRequest body) {
-        if (body == null || PasswordResetApiController.isBlank(body.token) || PasswordResetApiController.isBlank(body.novaSenha)) {
-            return ResponseEntity.status((HttpStatusCode)HttpStatus.BAD_REQUEST).body((Object)new ApiStatus("dados_invalidos"));
+        if (body == null || isBlank(body.token) || isBlank(body.novaSenha)) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(new ApiStatus("dados_invalidos"));
         }
-        boolean ok = this.resetService.aplicarNovaSenha(body.token.trim(), body.novaSenha);
+        boolean ok = resetService.aplicarNovaSenha(body.token.trim(), body.novaSenha);
         if (!ok) {
-            return ResponseEntity.status((HttpStatusCode)HttpStatus.BAD_REQUEST).body((Object)new ApiStatus("token_invalido_ou_expirado"));
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(new ApiStatus("token_invalido_ou_expirado"));
         }
-        return ResponseEntity.ok((Object)new ApiStatus("alterada"));
+        return ResponseEntity.ok(new ApiStatus("alterada"));
     }
 
     private static boolean isBlank(String s) {
-        return s == null || s.trim().isBlank();
+        return s == null || s.trim().isEmpty();
     }
+
+    // ===== DTOs =====
 
     public static class EsqueciSenhaRequest {
         @NotBlank
         public String emailOuCpf;
 
-        public String getEmailOuCpf() {
-            return this.emailOuCpf;
-        }
-
-        public void setEmailOuCpf(String emailOuCpf) {
-            this.emailOuCpf = emailOuCpf;
-        }
+        public String getEmailOuCpf() { return emailOuCpf; }
+        public void setEmailOuCpf(String emailOuCpf) { this.emailOuCpf = emailOuCpf; }
     }
 
     public static class ApiStatus {
         public String status;
 
-        public ApiStatus() {
-        }
+        public ApiStatus() {}
+        public ApiStatus(String status) { this.status = status; }
 
-        public ApiStatus(String status) {
-            this.status = status;
-        }
-
-        public String getStatus() {
-            return this.status;
-        }
-
-        public void setStatus(String status) {
-            this.status = status;
-        }
+        public String getStatus() { return status; }
+        public void setStatus(String status) { this.status = status; }
     }
 
     public static class ValidarTokenResponse {
         public boolean valido;
 
-        public ValidarTokenResponse() {
-        }
+        public ValidarTokenResponse() {}
+        public ValidarTokenResponse(boolean valido) { this.valido = valido; }
 
-        public ValidarTokenResponse(boolean valido) {
-            this.valido = valido;
-        }
-
-        public boolean isValido() {
-            return this.valido;
-        }
-
-        public void setValido(boolean valido) {
-            this.valido = valido;
-        }
+        public boolean isValido() { return valido; }
+        public void setValido(boolean valido) { this.valido = valido; }
     }
 
     public static class ResetarSenhaRequest {
@@ -125,21 +90,10 @@ public class PasswordResetApiController {
         @NotBlank
         public String novaSenha;
 
-        public String getToken() {
-            return this.token;
-        }
+        public String getToken() { return token; }
+        public void setToken(String token) { this.token = token; }
 
-        public void setToken(String token) {
-            this.token = token;
-        }
-
-        public String getNovaSenha() {
-            return this.novaSenha;
-        }
-
-        public void setNovaSenha(String novaSenha) {
-            this.novaSenha = novaSenha;
-        }
+        public String getNovaSenha() { return novaSenha; }
+        public void setNovaSenha(String novaSenha) { this.novaSenha = novaSenha; }
     }
 }
-
